--- a/style.css
+++ b/style.css
@@ -1,112 +1,179 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
+*,
+::after,
+::before {
+  box-sizing: border-box;
+  margin: 0;
 }
+
 body {
-    background-color: rgba(174, 192, 16, 0.526);
-    color: rgb(245, 189, 8);
-    height: 100vh;
-    width: 100%;
+  background-color: rgba(174, 192, 16, 0.526);
+  color: rgb(245, 189, 8);
+  height: 100vh;
+  /* width: 100%; */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* gap: vmin; */
 }
 
 .top-bar {
-    background-color: royalblue;
-    color: white;
-    text-align: center;
-    padding-top: 10px;  /**/
-    height: 1.7em;
-    font-size: 1.5em;
-    border-bottom: 4px solid darkblue;
-    border-radius: 20px;
-    border: 2px solid beige;
-    font-size: 2.5em;
-    text-shadow: 3px 3px 3px black;
-    width: 100%;
-}
-
-.top-bar::before{  /**/
-    content: "\1F4DA ";
-    /* font-size: 1.5em; */
+  background-color: royalblue;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 20px;
+  border: 2px solid beige;
+  font-size: 6vmin;
+  text-shadow: 3px 3px 3px black;
+  width: 100%;
 }
 
 .quiz-container {
-    height: auto;
-    background-color: rgba(91, 19, 91, 0.888);
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  gap: 2vmin;
+  background-color: purple;
+  padding: 1vmin;
+  border-radius: 20px;
+  border: 2px solid beige;
+  font-size: 4vmin;
+  text-shadow: 3px 3px 3px black;
+  margin: 2vmin;
+  height: 100%;
+  overflow: hidden;
+
+
+  .quiz {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0, 64, 128);
+    padding: 2vmin;
     border-radius: 20px;
-    padding: 1rem;
-    border: 1px solid beige;
-}
+    border: 2px solid beige;
+    font-size: 4vmin;
+    text-shadow: 3px 3px 3px black;
+    margin: 2vmin;
+    width: 100%;
 
-.quiz .slide .question{
-    text-align: center;
-    font-size: 2em;
-    padding: 0.8em;
-    color: #00ff26; /**/
-    font-weight: bold; /**/
-    background-color: rgb(22, 99, 99);
-    text-shadow: 2px 3px 3px rgb(162, 162, 109);
-    border-radius: 10px;
-    border: 0.5px solid beige;
-}
+    .slide {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      border-radius: 20px;
+      gap: 3vmin;
+      flex-wrap: wrap;
+      width: 100%;
 
+      .question {
+        border: 1px solid gold;
+        border-radius: 20px;
+        padding: 1vmin;
+        text-shadow: 3px 3px 3px black;
+        width: 100%;
+        text-align: center;
+        height: 12vmin;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
 
-.quiz .slide .answers{
-    margin-top: 3em;
-}
+      .answers {
+        display: flex;
+        flex-direction: column;
+        gap: 2vmin;
+        
 
-.quiz .slide .answer{
-    margin-left: 20%;
-    width: 55%;
-    font-size: 1.5em; /**/
-    padding: 15px;
-    border: 0.8px solid gold;
-    margin-bottom: 10px;
-    border-radius: 25px;
-    text-shadow: 3px 3px 4px grey;
+        .answer {
+          display: flex;
+          gap: 3vmin;
 
-}
+          input {
+            width: 3vmin;
+            height: 3vmin;
+            cursor: pointer;
 
-.prev-next-btn {
-    /* text-align: center; */
-    margin-top: 2em;
-    transform: translateX(28%);
-}
+            &:checked {
+              accent-color: darkred;
+              
+            }
+          }
+        }
+      }
+    }
+  }
 
-.submit-wrapper {
-    /* text-align: center; */
-    margin-top: 1em;
-    transform: translate(37%);
-}
+  .prev-next-btn {
+    display: flex;
+    gap: 3vmin;
 
+    .previous-btn {
+      background-color: white;
+      color: darkred;
+      border: 1px solid gold;
+      font-weight: bold;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 4vmin;
+      padding: 1vmin 3vmin;
+      height: 8vmin;
+      width: 25vmin;
 
-.previous-btn, .next-btn, .submit-btn{
-    width: 3cm;
-    padding: 5px;
-    font-size: 1.2em;
-    font-weight: 400;
-    border-radius: 30px;
-    margin-left: 6%;
-    cursor: pointer;
-}
+      &:hover {
+        background-color: yellow;
+        color: darkred;
+      }
+    }
 
-.previous-btn {
-    margin-right: 2em;
-}
+    .next-btn {
+      background-color: green;
+      color: white;
+      border: 1px solid gold;
+      font-weight: bold;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 4vmin;
+      padding: 1vmin 3vmin;
+      height: 8vmin;
+      width: 20vmin;
 
+      &:hover {
+        background-color: white;
+        color: green;
+      }
+    }
+  }
 
-
-.next-btn {
+  .submit-btn {
     background-color: royalblue;
     color: white;
     border: 1px solid gold;
-    font-weight: bold
+    font-weight: bold;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 4vmin;
+    padding: 1vmin 3vmin;
+    height: 8vmin;
+    width: 20vmin;
+
+    &:hover {
+      background-color: rgb(0, 64, 128);
+    }
+  }
+
+
 }
 
-
-.results {
+  .results {
+    width: 100%;
     text-align: center;
     margin-top: 1em;
     margin-bottom: 1em;
@@ -117,4 +184,4 @@ body {
     border-radius: 15px;
     border: 1px solid gold;
     color: rgb(115, 5, 5);
-}
+  }
